lab1/Test/L1-A-9-6.output
Error Type B at Line 1
Error Type B at Line 2
Error Type B at Line 9
Error Type B at Line 28
Error Type B at Line 31
