lab1/Test/L1-A-9-6.cmm
;
struct o7qTC1Yi rbD2D8XkheWF struct {
  int XOU3Wit9NJ ;
}SqeTuvyxwn6 , struct Rd_J5rKJIUkaazP2hrxo IMGhM11I2nR 
  ) {
  int IagxdXw8FMuUr [ 514468147 ] , ZvoQLVPuCJSnd3E 
    = OdR9 [ UtQ = b1zWX4VC || J0k && W22epJVL150h2EvW 
    < o8kDDUU5 + MUhfn4RwQrGMtDEpGt / kLm8b94 ( lp0VWNRdLucF954hD_M 
    = gcVifrI = u_9swc75 || QIRYLrk34 == FMnd - Z_ / [ 
    VZ5UCHHyJPutYMLi != ed4o4RaRO / ( vPxIezmX || HZ6CsJlaCj 
    / - Zljejn1mmmu8Nwf [ SteTvwZ2aw = mYXD0HaX >= - NArLLSV3SMnfkw_m9A 
    [ fHmGm || m7OtkyjM + G2EZJwi [ lHkzeE2h2IGJO_4E || 
    ! ! ( tqU = lY0CVSL - ( yB_dR1HkKnrJ2yz9b || J >= 
    - - - ( NTaM && SCOt5uN4rG6F2 [ eYerKm && gFPfoHgZZrKMH9hlYk 
    == ( J2Qy68Vr6T [ rbPSH && ( yYccaljRf || nTHEyO0C5 
    != E08y7ADAB8gvE85s * FXiMQhdvlX_ ( qp9aR_QvNRPBEctFFt 
    , nOy4_ ) + S7Uls25iuHX3hLvSf ) ] * rZtHprlXgqAc / 
    ! gZreMrYLmBQwoQeue ) && - unRxw6k_ || hEzXRzZp5 / 
    - - - jpayYkapFpW4Mnaz_cW ] ) . YW4F8k5 ) ) ] ] - 
    Rm1CQV3 && ! - L8VPLrZYydBgZjx_i47A ] <= LD_06Q4UaS7 
    . RJE0f_wYoZ_gdvPJJBa / - kRa >= ! ydNEk5K6es <= - 
    Y4qRJLTmW ) . tX4hApN6PM + - 421521984.1860948723 
    > ! EUi15g0En ] . NQxMyR ) ] . mN = ! - Htskw4VllBvrKpIna5 
    ( ) * 1615497330 ;
}
int enrXLmBT3qZWBuHm5A , 

;
struct Blku7 nR 
;
struct KQkuydmaEaXG }ZxNQ6LaZ32RNgxI ( ) {
  if ( Y5tJM9o8hqttY9 )   SO_IhibCO ;
else   hQb0RrHkrFqL_3CGJek ;

  if ( M_09KQnSx )   while ( ygKuMfty4uHm ) {
    int YWAv ;
    xQfdIe9PWnnMIdm ;
    if ( i43Nqg )     p6HG4OnAl8D8f ;
else     if ( b )     J45KXgj7pXNy3g ;


  }
else   return NnBruUzWlqJ3koHjTK6 ;

}
